# ChangeLog for media-gfx/colorhug-client
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/colorhug-client/ChangeLog,v 1.18 2014/09/07 17:57:20 pacho Exp $

  07 Sep 2014; Pacho Ramos <pacho@gentoo.org> -colorhug-client-0.2.0.ebuild:
  Drop old

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> colorhug-client-0.2.1.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> colorhug-client-0.2.1.ebuild:
  Stable for amd64, wrt bug #512912

*colorhug-client-0.2.1 (27 Apr 2014)

  27 Apr 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  colorhug-client-0.2.0.ebuild, +colorhug-client-0.2.1.ebuild,
  +files/colorhug-client-0.2.1-colord-1.2.patch:
  Version bump and fix bash completion paths (bug #497790, thanks to poncho).
  Fix build failure with colord-1.2.

  27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -colorhug-client-0.1.12.ebuild:
  drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> colorhug-client-0.2.0.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> colorhug-client-0.2.0.ebuild:
  amd64 stable, bug #478252

  30 Jun 2013; Gilles Dartiguelongue <eva@gentoo.org>
  colorhug-client-0.2.0.ebuild:
  Fix man page and introspection handling.

*colorhug-client-0.2.0 (02 Jun 2013)

  02 Jun 2013; Pacho Ramos <pacho@gentoo.org> +colorhug-client-0.2.0.ebuild,
  metadata.xml:
  Version bump, gnome team will also take care of this to be sure it's updated
  soon enough for not losing the track with colord* changes (#464268 by Jean-
  Marc Hengen)

  03 Mar 2013; Pacho Ramos <pacho@gentoo.org> -colorhug-client-0.1.10.ebuild,
  colorhug-client-0.1.12.ebuild:
  Update homepage (#453728  by Peter Albrecht), drop old.

*colorhug-client-0.1.12 (07 Oct 2012)

  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> +colorhug-client-0.1.12.ebuild,
  -colorhug-client-0.1.6.ebuild, -colorhug-client-0.1.7-r1.ebuild,