@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX colorhug-client-0.2.1-colord-1.2.patch 1679 SHA256 501e50c975b4d856588cbc894e1f95c8b48243b87023ecbc3193353ba52237c5 SHA512 b599bc13498fb0e45cfdf25d858a8ed956216842e9dccdfb7e394f1db29b7f0df0d2dfd98d032e6e5757972f81ff42da32d904198fb583d50e796bf3f2d984cd WHIRLPOOL 733c9c3d155a053eae811d06c29b754657d6d49ad19337defb579f731127d54e7a3711236095276220efd1ade69b8445888af3b6a164c9181fd49a0acb84ab5c
 DIST colorhug-client-0.2.1.tar.xz 729408 SHA256 2559b96f23543d2ba443e863f63efdaf37cbccc90224dc4576f7993906a2d9f7 SHA512 3419e839430272ae49c34b61fe0b8e428e156f886f3461717d5a43569e94d519faf22c9627c8c93a6fdee0e48bf138625254ea8de6f0a49237b58637e14e512d WHIRLPOOL a62e41414106abbbc431f03daa759b4d1e51f61e63e2844b92ef2bc48d71e029fbcce2a464446bab6c48310602b59c0dc06251f19310ff6d073d8afa2823237c
+DIST colorhug-client-0.2.2.tar.xz 713560 SHA256 0e886d37e39bd39e49ee3f809bccd1c1751ef68cc8a2d9cf039ac4072b8ec37c SHA512 329e74767f15706f6f20a74ef191b5ea7cbdc01d59b3f5f55b77758b88c5685d56f2789140ae15c1f68a0adc12f62d1e98e0d166a0bd6afb330a62e8a4755bdf WHIRLPOOL 14cc9920fd8ad8953c6ccd37b97b4f682041d2f708be4966b401e89627610cc9178026baf94dda3cdb91e9336a9de2cc4293c636fff2033d93e5e6227c0d4333
 EBUILD colorhug-client-0.2.1.ebuild 1380 SHA256 73e5a3131e096d6776aaad8fc9a7170b357ceed62e5f74aae688129cebddbbf6 SHA512 e4356087fbf1d52b57add808ba89142f50e4ee5dcfbfd5b77d188213a2b6509d51c32f32bdd0cf20c91a8776baba0ba412f9f8fe223e357728386c2fb11d937a WHIRLPOOL 8498bf108d170e1aa3eea3314efe008a13a84da5fabb710d412f036880403235be0788f8967dbc32f5b7f6093e38444bc3751e684beac6c7e9322f01759c55df
-MISC ChangeLog 3197 SHA256 927767dbbfd0f788e38ed4380b7a7a6fa9ad12550e04a890ae4bb7d6690a5890 SHA512 7c8204b7828344bac39b02fd06638ca69b8ebc28f63400d07616d01a2cdeca3fa4c7d5fbac2df77f1b1a7efe2b25c8472d22cbde314deb9ebcce549ff15087ba WHIRLPOOL 2b8d755d69c12618ffee157fa262bc6ec4574cc13be5504d9726b59bebf8487a2ab0c2ce1ce131a64a58be7684ce391871ebbccec82f2edf73d9300a92dda304
+EBUILD colorhug-client-0.2.2.ebuild 1380 SHA256 d793915f8cf329a3ef3e3ed463e6a7a4b9163107253d70fb61f8c25832e4343c SHA512 fde94c5c342e99edc70351c0f1aa0ac86604a6ecb00ace6f7fa8d20e4c90a86fc12418127e3bc398a0e9285ced1fddffecab5de1a6484a019fb46ec5cb13f9ec WHIRLPOOL bfc2e8098217165f766d5952f3284b213c176d6402c3861f22761482a2791e6cec739dcffe9c8ff9fc54e7faac94f2ea443e69cc32e2fdb75c2d6f28ca021423
+MISC ChangeLog 3337 SHA256 6b07df18a46deb02d5468a56c106f954db286739226e3682fcaf474527bc9d91 SHA512 0991496e67d9b77878fa9a6d3b8a489be9ae5a8e1bf4419d3c5869983be2f8c681c682effc403abdcd32cd149e9b4b53ef1c94922b486e52de8e9246aaa18ed3 WHIRLPOOL 2b41cf279793d205facc816b901f0d5a440f0617405e04b9f4e2b67d8e7c88bcd5ae0140799981102914b1ef6fcb26b4ec0b6f101b9e1756692530c11eabdcb0
 MISC metadata.xml 326 SHA256 aaa2356b65ebfcef5d04214dc7ad57892a78ffffe1ca7c01ba8fbb1024e82a08 SHA512 01cd4bac8f87d1c688e5c01f85727256ba75e2b71289fe73b6803ee5d4df3f63b5fb38606530c921941cbb95ae47bd9f147b145e13f747d90e4ee622b76c2426 WHIRLPOOL 8163b013b15f42bb54c487b429173abaf845ba2c8c7a7239d451848d3e77eca27616c0b82cfd7b13759fb9225a675419a72fa27a236ff78a8db1f99800d177e8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQMnIEACgkQCaWpQKGI+9SGPQCdF0sKajQqJPJ1igdhAU3uRDLJ
-LxQAoIilExNFA3oPahZgSSoiD2RagYa7
-=6La2
+iEYEAREIAAYFAlRWM6QACgkQ1fmVwcYIWAb2wQCeO6Yn0li5THmkgo6zO1SUnf95
+dJoAn00h7r6S/VjSP84MxM19/1VA+m0J
+=dLmo
 -----END PGP SIGNATURE-----
